# source-code

./: vis_550_4.json
pharos/: .gitignore  README.md  draw_picture.py  entropy.py  eval.py  fast_batch_train.py  profile_results.prof  requirements.txt  solver_rl_diff.py  test_for_agents.sh  theoritcal_max.py  tmp.py  tmp2.py  train_diff_agents.sh  train_diff_agents_continue.sh
pharos-benchmark/: .gitignore  README.md  pyproject.toml  requirements.txt
pharos-benchmark/data/: agents10_humans10_seed0.json  agents20_humans10_seed0.json  agents30_humans10_seed0.json  agents40_humans10_seed0.json  agents5_humans10_seed0.json  model.onnx
pharos-benchmark/src/algorithms/: astar.py  pyomo_solver.py  rl_model.py
pharos-benchmark/src/core/: env.py  log_data.py  utils.py
pharos-benchmark/src/runner/: __init__.py  astar_runner.py  base_runner.py  pharos_runner.py  solver_runner.py
pharos-benchmark/src/scripts/: compare_entropy.py  compare_human_fear.py  compare_rewards.py  plot_rewards.py  process_all.py  run_algorithm.py
pharos-visual-3d/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
pharos-visual-3d/public/: vis-demo.json
pharos-visual-3d/src/: App.tsx  index.css
pharos-visual-3d/src/atoms/: configs.ts  history.ts
pharos-visual-3d/src/components/: building-model.tsx  config-panel.tsx  device-model.tsx  human-model.tsx  time-controller.tsx
pharos-visual-3d/src/hooks/: file.ts  remote-data.ts
pharos-visual-3d/src/models/: business-man.tsx  dji-tello.tsx  index.ts
pharos/examples/: train.py
(+59 files in other folders)
