
[project]
name = "pharos-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.0",
    "pyomo>=6.9.2",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = ["ruff>=0.12.0"]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py313"
